Fix buttons alignments
Fixes plone/Products.CMFPlone#1720

--- a/plonetheme/barceloneta/theme/less/barceloneta-compiled.css
+++ b/plonetheme/barceloneta/theme/less/barceloneta-compiled.css
@@ -1732,8 +1732,8 @@ label .required:after {
   text-align: center;
 }
 .ordered-selection-field td button {
-  float: left;
-  margin-left: 2rem;
+  display: block;
+  margin: auto;
 }
 .folder-factories {
   list-style: none;
