--- a/plonetheme/barceloneta/theme/less/forms.plone.less
+++ b/plonetheme/barceloneta/theme/less/forms.plone.less
@@ -285,8 +285,8 @@ margin-right: 12px;
     text-align: center;
   }
   td button{
-    float: left;
-    margin-left: 2rem;
+    display: block;
+    margin: auto;
   }
 }
 
